# OTUS_HW13

./: CMakeLists.txt
mnist_solutions/: CMakeLists.txt  conanfile.txt
mnist_solutions/catboost_solution/: CMakeLists.txt  catboost_solution.cpp
mnist_solutions/demo/: demo_logreg.cpp  helpers.cpp  helpers.h
mnist_solutions/include/: catboost_classifier.h  logreg_classifier.h
mnist_solutions/logistic_regression_solution/: CMakeLists.txt  logistic_regression_solution.cpp
mnist_solutions/mlp_solution/: CMakeLists.txt  mlp_solution.cpp
mnist_solutions/src/: catboost_classifier.cpp  logreg_classifier.cpp
mnist_solutions/src/mnist/: mlp_classifier.cpp  tf_classifier.cpp
mnist_solutions/tensorflow_solution/: CMakeLists.txt  tensorflow_solution.cpp
